--- a/css/style.css
+++ b/css/style.css
@@ -429,6 +429,11 @@ body::after {
   -o-object-fit: contain;
   object-fit: contain
 }
+.hidden {
+  display: none;
+  opacity: 0;
+  visibility: hidden
+}
 .header {
   background: #f5f5f5;
   margin-bottom: 3.125rem
