--- a/css/style.css
+++ b/css/style.css
@@ -432,7 +432,8 @@ body::after {
 .hidden {
   display: none;
   opacity: 0;
-  visibility: hidden
+  visibility: hidden;
+  pointer-events: none
 }
 .header {
   background: #f5f5f5;
