--- a/css/style.css
+++ b/css/style.css
@@ -757,6 +757,7 @@ body::after {
   margin-top: 1.25rem;
   margin-left: 1.25rem;
   margin-right: 1.25rem;
+  margin-bottom: .625rem;
   padding-bottom: .625rem;
   border-bottom: 1px solid rgba(0,0,0,.3)
 }
